* 2012-06-06 - martin.herfurth@open-xchange.com

 - Fix for bug 22258: Fixed missing folder-id on invitation accepts.
 - Fix for bug 21691: Initial Alarm on new Appointments.

* 2012-06-06 - thorben.betten@open-xchange.com

 - Fix for bug 22257: Don't stick to specific error code MSG-0063 to assume folder creation failed because of already existent folder

* 2012-06-05 - thorben.betten@open-xchange.com

 - Fix for bug 22245: Properly use ACE address for SMTP's envelope-from header

* 2012-06-04 - thorben.betten@open-xchange.com

 - Fix for bug 22242: Changed error message
 - Fix for bug 22241: Don't retry to load mail account data with a connection to DB master
 - Fix for bug 22246: Allowing '+' character inside a token
 - Fix for bug 22095: Resolved possible java.lang.StringIndexOutOfBoundsException & improved logging

* 2012-06-03 - thorben.betten@open-xchange.com

 - Fix for bug 22217: Resolved possible deadlock on session lock
 - Fix for bug 22226: Perform a delete-if-present operation
 - Fix for bug 22225: Introduced update task to add missing index to distribution list tables for fast look-up

* 2012-06-02 - thorben.betten@open-xchange.com

 - Fix for bug 22236: Check determined sequence number prior to issuing an IMAP FETCH command
 - Fix for bug 22237: Checking for possible empty path when writing response cookies
 - Fix for bug 22165: Dealing with TNEF-encoded nested messages

* 2012-05-31 - thorben.betten@open-xchange.com

 - Fix for bug 22228: Guess Content-Type by file name if broken within client request
 - Fix for bug 22231: Proper check for possibly empty file name

* 2012-05-31 - martin.herfurth@open-xchange.com

 - Fix for bug 22109: Use default sender address for IMip Mails.
 - Fix for bug 22098: Added resource tag to mails for resource invitations.
 - Fix for bug 22124: Invitations in shared IMAP folders.

* 2012-05-25 - thorben.betten@open-xchange.com

 - Fix for bug 22192: Proper decoding of MIME encoded Content-Disposition header