@@ -1,3 +1,7 @@
+* 2012-06-07 - thorben.betten@open-xchange.com
+
+ - Fix for bug 22162: Checking if uploaded file's Content-Type starts with "application/force" to let its MIME type be resolved by file name
+
 * 2012-06-06 - martin.herfurth@open-xchange.com
 
  - Fix for bug 22258: Fixed missing folder-id on invitation accepts.
